fixed syllabus module button styling to resize on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,7 +97,7 @@ button {
 	border: 0;
 	padding: 10px 15px;
 	border-radius: 3px;
-	width: 250px;
+	/* width: 250px; */
 	cursor: pointer;
 	font-size: 18px;
 	transition-duration: 0.25s;
