--- a/client/src/pages/syllabus/syllabus.css
+++ b/client/src/pages/syllabus/syllabus.css
@@ -7,7 +7,7 @@
 .overview-btn {
 	background-color: #f1e189;
 	border-radius: 3px;
-	width: 250px;
+	width: 100%;
 	cursor: pointer;
 	font-size: 18px;
 	color: rgb(50, 50, 50);
